hphp/hack/test/typecheck/missing_tparam5.php
<?hh

newtype Foo<T> as string = string;

class C {
  private ?Foo $foo;
}
